# cache

./: .gitignore  CMakeLists.txt  Makefile  README.md  cache.cpp  cache.hpp  cacheTEST.cpp  cash.cpp  header.hpp  main.cpp  perfect_cache.cpp  perfect_cache.hpp
LFU_cache/: CMakeLists.txt
LFU_cache/lib/: cache.hpp
LFU_cache/src/: cache.cpp
lib/: cache.hpp  header.h  perfect_cache.hpp
perfect_cache/: CMakeLists.txt
perfect_cache/lib/: perfect_cache.hpp
perfect_cache/src/: perfect_cache.cpp
src/: CMakeLists.txt  cache.cpp  perfect_cache.cpp
test/: CMakeLists.txt  caches.cpp  gtest.cpp  test1.txt  test2.txt  test3.txt
